--- a/client/src/app/module1/Views/module1.html
+++ b/client/src/app/module1/Views/module1.html
@@ -29,6 +29,7 @@
         Arg 2 : <input type="text" ng-model="deployObj.args[2]">
         Value 2 : <input type="text" ng-model="deployObj.args[3]">
         <input type="submit" value="Deploy" ng-click="deploy()">
+        <h2 ng-bind="result"></h2>
     </fieldset>
     <fieldset>
         <legend>Query</legend>
