--- a/client/src/app/login/Views/login.html
+++ b/client/src/app/login/Views/login.html
@@ -1,18 +1,15 @@
-<form>
-    <fieldset>
-        <legend>Deploy</legend>
-        <label for="peer"> Peer : </label>
-        <select name="peer" ng-model="deployObj.peer">
-            <option value="2">Validating Peer 0</option>
-            <option value="0">Validating Peer 1</option>
-            <option value="1">Validating Peer 2</option>
-            <option value="3">Validating Peer 3</option>
-        </select>
-        EnrollID : <input type="text" ng-model="deployObj.enrollId"><br>
-        EnrollSecret : <input type="text" ng-model="deployObj.enrollSecret"><br>
-        <label for="chaincodeUrl"> Chaincode Url : </label>
+<div class="login">
+    <form class="login-form">
+        <h1>Connexion</h1>
+        <label for="enrollId"> EnrollID : </label>
+        <input title="enrollId" type="text" class="txt-login" ng-model="deployObj.enrollId"><br>
+        <label for="enrollSecret"> EnrollSecret : </label>
+        <input title="enrollSecret" type="password" class="txt-login" ng-model="deployObj.enrollSecret"><br>
+        <input class="btn btn-primary btn-connect" type="submit" value="CONNECT" ng-click="deploy()">
+        <span class="error" ng-bind="error"></span>
+        <!--<label for="chaincodeUrl"> Chaincode Url : </label>
         <input type="text" name="chaincodeUrl" ng-model="deployObj.chaincodeUrl">
-        <label for="deployFunction"> Function : </label>
+        <label for="deployFunctsion"> Function : </label>
         <input type="text" name="deployFunction" ng-model="deployObj.function"><br>
         <label> Args : </label>
         Arg 1 : <input type="text" ng-model="deployObj.args[0]">
@@ -20,6 +17,6 @@
         Arg 2 : <input type="text" ng-model="deployObj.args[2]">
         Value 2 : <input type="text" ng-model="deployObj.args[3]">
         <input type="submit" value="Deploy" ng-click="deploy()">
-        <h2 ng-bind="result"></h2>
-    </fieldset>
-</form>
+        <h2 ng-bind="result"></h2>-->
+    </form>
+</div>
